--- a/Resources/Styles.xaml
+++ b/Resources/Styles.xaml
@@ -117,6 +117,17 @@
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="TextAlignment" Value="Right"/>
     </Style>
+    <Style x:Key="InAndOutFlowTextHeaderStyle" TargetType="TextBlock" BasedOn="{StaticResource TitleTextBlockStyle}">
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="FontStyle" Value="Italic"/>
+        <Setter Property="FontWeight" Value="Normal"/>
+        <Setter Property="TextAlignment" Value="Right"/>
+    </Style>
+    <Style x:Key="InAndOutFlowTextStyle" TargetType="TextBlock" BasedOn="{StaticResource TitleTextBlockStyle}">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontWeight" Value="Normal"/>
+        <Setter Property="TextAlignment" Value="Right"/>
+    </Style>
 
     <Style x:Key="ListItemTextStyle" TargetType="TextBlock" BasedOn="{StaticResource SubtitleTextBlockStyle}">
         <Setter Property="FontSize" Value="18"/>
