--- a/Views/AssetsView.xaml
+++ b/Views/AssetsView.xaml
@@ -10,15 +10,19 @@
     xmlns:converters="using:CryptoPortfolioTracker.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:controls="using:CryptoPortfolioTracker.Controls" 
+    xmlns:controls="using:CryptoPortfolioTracker.Controls"
+    xmlns:lvc="using:LiveChartsCore.SkiaSharpView.WinUI"
     d:DataContext="{d:DesignInstance Type=viewmodels:AssetsViewModel}"
     Loading="View_Loading"
+    Loaded="View_Loaded"
+    Unloaded="View_Unloaded"
     mc:Ignorable="d">
 
     <Page.Resources>
         <converters:StringFormatConverter x:Key="StringFormatConverter"/>
         <converters:AddPrefixConverter x:Key="AddPrefixConverter"/>
         <converters:BoolToRowDefConverter x:Key="BoolToRowDefConverter"/>
+        <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
 
         <Style x:Key="HorizontalSwipe" TargetType="ListViewItem" BasedOn="{StaticResource DefaultListViewItemStyle}">
             <Setter Property="Height" Value="60"/>
@@ -32,37 +36,102 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid x:Name="HeaderGrid" CornerRadius="8,8,0,0" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,0,5,10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
             <Grid.RowDefinitions>
-                <RowDefinition Height="100"/>
-                <RowDefinition Height="110"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="130"/>
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
-            <controls:HomePageHeaderImage Grid.Row="0" Grid.RowSpan="3" Height="265" VerticalAlignment="Top"/>
-            <RelativePanel Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="570"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <controls:HomePageHeaderImage Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="2" Height="265" VerticalAlignment="Top"/>
+            <RelativePanel Grid.Row="0" Grid.RowSpan="3" Grid.Column="0">
                 <TextBlock AutomationProperties.AutomationId="__ClickableAreaTextBlock" />
                 <TextBlock x:Name="smallHeaderText" Text="Crypto Portfolio Tracker" Foreground="DarkGoldenrod" Margin="36,20,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
                 
                 <TextBlock l:Uids.Uid="Assets_Title" x:Name="txtAssets" Margin="36,10,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
-                <TextBlock Text="{Binding ListAssetTotals.Count, Converter={StaticResource AddPrefixConverter}, ConverterParameter=' (|)' }" Margin="0,10,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" RelativePanel.RightOf="txtAssets" />
+                <TextBlock Text="{Binding ListAssetTotals.Count, Converter={StaticResource AddPrefixConverter}, ConverterParameter=' (|)' }" 
+                    Margin="0,10,0,0" 
+                    Foreground="DarkGoldenrod" 
+                    Style="{StaticResource SampleHeaderTextStyle}" 
+                    RelativePanel.Below="smallHeaderText" RelativePanel.RightOf="txtAssets" />
                 <!--Grid HorizontalAlignment="Right" Width="{Binding ElementName=HeaderGrid,Path=ActualWidth}" Margin="0,10,0,0"-->
-                    <RelativePanel RelativePanel.AlignRightWithPanel="True">
-                    <TextBlock x:Name="txtTotalAssetsValue" Text="{Binding TotalAssetsValue, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" Foreground="DarkGoldenrod" Margin="36,15,20,0" Style="{StaticResource ValueHeaderTextStyle}" />
-                    <TextBlock x:Name="txtProfitLossPerc" Text="{Binding TotalAssetsPnLPerc, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:N2} %'}" Foreground="DarkGoldenrod" Margin="36,0,20,0" Style="{StaticResource PercHeaderTextStyle}" RelativePanel.AlignRightWith="txtTotalAssetsValue" RelativePanel.Below="txtTotalAssetsValue" />
-                    </RelativePanel>
-                <!--/Grid-->
             </RelativePanel>
-            <TextBlock l:Uids.Uid="Assets_Explainer" Grid.Row="1" VerticalAlignment="Bottom" Margin="35,0,20,20" Style="{StaticResource ExplainerTextStyle}"   TextWrapping="Wrap" />
-            <Border Grid.Row="2" VerticalAlignment="Stretch">
+
+            <RelativePanel Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" >
+                <TextBlock x:Name="txtTotalAssetsValue" RelativePanel.AlignRightWithPanel="True"
+                    Text="{Binding TotalAssetsValue, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" 
+                    Foreground="DarkGoldenrod" 
+                    Margin="0,15,20,0" 
+                    Style="{StaticResource ValueHeaderTextStyle}" />
+                <TextBlock x:Name="txtProfitLossPerc" 
+                    Text="{Binding TotalAssetsPnLPerc, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:N2} %'}" 
+                    Foreground="DarkGoldenrod" 
+                    Margin="36,0,20,0" Style="{StaticResource PercHeaderTextStyle}" 
+                    RelativePanel.AlignRightWith="txtTotalAssetsValue" 
+                    RelativePanel.Below="txtTotalAssetsValue" />
+                
+                <StackPanel l:Uids.Uid="Assets_InFlowPanel" 
+                    x:Name="txtInflow" 
+                    Orientation="Vertical" 
+                    Visibility="{Binding IsHidingCapitalFlow, Converter={StaticResource BoolToVisibilityConverter}, Mode=TwoWay}"
+                    RelativePanel.LeftOf="txtOutflow" RelativePanel.AlignBottomWith="txtOutflow"
+                    Margin="0,0,0,0">
+                    <TextBlock l:Uids.Uid="Assets_InFlow"
+                        Foreground="Goldenrod" 
+                        Margin="0,0,20,0" Style="{StaticResource InAndOutFlowTextHeaderStyle}" 
+                        />
+                    <TextBlock 
+                        Text="{Binding InFlow, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" 
+                        Foreground="Goldenrod" 
+                        Margin="0,0,20,0" Style="{StaticResource InAndOutFlowTextStyle}" 
+                            />
+                </StackPanel>
+
+                <StackPanel l:Uids.Uid="Assets_OutFlowPanel" x:Name="txtOutflow" Orientation="Vertical"
+                    Visibility="{Binding IsHidingCapitalFlow, Converter={StaticResource BoolToVisibilityConverter}, Mode=TwoWay}"
+                    RelativePanel.AlignRightWithPanel="True" 
+                    RelativePanel.Below="txtProfitLossPerc"
+                    Margin="0,90,0,0">
+                    
+                    <TextBlock l:Uids.Uid="Assets_OutFlow"
+                        Foreground="Goldenrod" 
+                        Margin="0,0,20,0" Style="{StaticResource InAndOutFlowTextHeaderStyle}" 
+                        />
+                    <TextBlock
+                        Text="{Binding OutFlow, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" 
+                        Foreground="Goldenrod" 
+                        Margin="0,0,20,0" Style="{StaticResource InAndOutFlowTextStyle}" 
+                            />
+                </StackPanel>
+
+                
+
+
+            </RelativePanel>
+                <!--/Grid-->
+            
+            <TextBlock l:Uids.Uid="Assets_Explainer" 
+                       Grid.Row="1" Grid.Column="0"
+                       VerticalAlignment="Bottom" 
+                       Margin="35,0,5,0" Style="{StaticResource ExplainerTextStyle}"   
+                       TextWrapping="Wrap" />
+            <Border Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Stretch">
                 <Grid Name="AssetsContent">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="{Binding IsExtendedView, Converter={StaticResource BoolToRowDefConverter}, ConverterParameter=122|1*}"/>
                         <RowDefinition Height="{Binding IsExtendedView, Converter={StaticResource BoolToRowDefConverter}, ConverterParameter=75|0}"/>
                         <RowDefinition Height="{Binding IsExtendedView, Converter={StaticResource BoolToRowDefConverter}, ConverterParameter=0.7*|0}"/>
-                        <RowDefinition Height="40"/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <controls:AssetsListViewControl x:Name="MyAssetsListViewControl" x:FieldModifier="public" Margin="0,0,0,0" Grid.Row="0"  />
                     <controls:AssetAccountsGridViewControl x:Name="MyAssetAccountsGridViewControl" x:FieldModifier="public" Margin="0,-7,0,0" Grid.Row="1" />
                     <controls:AssetTransactionsListViewControl x:Name="MyAssetTransactionsListViewControl" x:FieldModifier="public"  Margin="0,-5,0,0" Grid.Row="2" />
-                    <Button l:Uids.Uid="Assets_TransactionButton" Visibility="Visible" HorizontalAlignment="Stretch" Margin="10,10,0,0" Grid.Row="3"
+                    <Button l:Uids.Uid="Assets_TransactionButton" 
+                            Visibility="Visible" 
+                            HorizontalAlignment="Stretch" 
+                            Margin="10,10,0,0" 
+                            Grid.Row="3"
                             Command="{Binding ShowTransactionDialogToAddCommand}"/>
                 </Grid>
             </Border>
